--- a/array23.html
+++ b/array23.html
@@ -2,24 +2,14 @@
     <head></head>
     <body>
         <script>
-            var ar=[23,34,54,10,4,7]
+            var ar=[23,34,54,10,34,7,23,10,34]
             var a=+prompt();
-            c=0;
+            var count=0;
             for(var i=0;i<=ar.length-1;i++)
             {
                 if(ar[i]==a)
-                {
-                    c++;
-                }
             }
-            if(c>0)
-            {
-                console.log('true')
-            }
-            else
-            {
-                console.log('false')
-            }
+
         </script>
     </body>
 </html>
