--- a/array22.html
+++ b/array22.html
@@ -16,7 +16,7 @@
                     console.log('true')
                 }
                 else{
-                    console.log('false')
+                    console.log("false")
                 }
         </script>
     </body>
