--- a/array23.html
+++ b/array23.html
@@ -7,9 +7,11 @@
             var count=0;
             for(var i=0;i<=ar.length-1;i++)
             {
-                if(ar[i]==a)
+                if(ar[i]==a){
+                    count=count+1;
+                }
             }
-
+            console.log(count)
         </script>
     </body>
 </html>
