--- a/object.html
+++ b/object.html
@@ -10,10 +10,15 @@
                 "skill" :"ReactJS",
                 "expertise":"Beginner",
             };
-            for(var A in person)
-            {
-                console.log( person["firstname"])
-            }
-        </script>
+                console.log( person["firstname"]) 
+                console.log(person['lastname']) 
+                console.log(person['firstname']+person['lastname']) 
+                if(person['age']<18){
+                    console.log('false')
+                }
+                else{
+                    console.log('true')
+                }        
+        </script> 
     </body>
 </html>
