--- a/array&object1.html
+++ b/array&object1.html
@@ -95,6 +95,15 @@ for(var i=0;i<=people.length-1;i++)
             // console.log(increment+3750)
         </script>
         <script>
+            for(var i=0;i<=people.length-1;i++)
+            {
+                if(people[i]['salary']>25000*(115/100))
+                {
+                    console.log(people[i]['firstname'])
+                }
+            }
+        </script>
+        <script>
             var a=prompt();
             for(var i=0;i<=people.length-1;i++)
             {
