--- a/string4.html
+++ b/string4.html
@@ -6,7 +6,7 @@
             var ar=prompt();
             for(var i=0;i<=ar.length-1;i++)
             {
-                console.log(ar[7])
+                console.log(ar[ar.length-1])
             }
         </script>
     </body>
